# HIP_Course

course_material/: CMakeLists.txt  setonix_amd.cmake
course_material/L1_Introduction/: CMakeLists.txt
course_material/L2_Using_HIP_On_Setonix/: Setonix.ipynb  jobscript.sh
